# dental_finder

./: .gitignore  README.md  docker-compose-dev.yaml  docker-compose.yaml  docker-compose.yml  package-lock.json
dental_finder/: Makefile  README.md  pyproject.toml  requirements.txt
dental_finder/docs/: Makefile  index.rst  make.bat
dental_finder/notebooks/: 01-extract-data.ipynb  clinics (1).csv  subscriptions (2).csv
dental_finder/src/data/: make_dataset.py
dental_finder_project/: main.py  pyproject.toml  setup.py
dental_finder_project/docs/: conf.py
dental_finder_project/notebooks/: 01-extract-data.ipynb  activity (1).csv
dental_finder_project/src/data/: extract.py
dental_finder_project/src/transformation/: package-lock.yml  packages.yml
dental_finder_project/src/transformation/macros/: first_user_hubspot_source.sql  marketing_attribuition.sql
dental_finder_project/src/transformation/models/: source.yml
dental_finder_project/src/transformation/models/core/: fact_clinics.sql
dental_finder_project/src/transformation/models/staging/: activity.sql  clinics.sql  schema.yml  subscription.sql
superset_home/: celerybeat-schedule  superset.db-journal
